--- a/src/layout/layout.less
+++ b/src/layout/layout.less
@@ -5,12 +5,11 @@
   overflow-x: auto;
   background: #fff;
 
-  display: flex;
+  display: grid;
+  grid-template: "leftside content" auto / 220px 1fr;
   > .aside {
-    flex: 1;
     border-right: 2px solid rgba(5, 5, 5, 0.06);
     height: 100%;
-    min-width: 150px;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -33,8 +32,6 @@
   }
 
   > .main {
-    flex: none;
-    width: 1150px;
     height: 100%;
     overflow: auto;
   }
