--- a/src/layout/layout.less
+++ b/src/layout/layout.less
@@ -34,6 +34,16 @@
   > .main {
     min-width: 1200px;
     height: 100%;
-    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    > .layout-bar {
+      flex: none;
+      width: 100%;
+    }
+    > .content {
+      width: 100%;
+      flex: 1;
+      overflow: auto;
+    }
   }
 }
