用户信息修改

--- a/src/layout/Bar/bar.less
+++ b/src/layout/Bar/bar.less
@@ -5,4 +5,12 @@
   padding: 20px;
   box-sizing: border-box;
   background-color: azure;
+
+  > .user-info {
+    .avatar-wrapper {
+      :hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
