--- a/src/page/poetry/search/index.less
+++ b/src/page/poetry/search/index.less
@@ -1,6 +1,9 @@
 .poetry-search {
+  box-sizing: border-box;
+  height: 100%;
   padding: 20px;
   > .search {
+    flex: none;
     margin-top: 10px;
     margin-bottom: 20px;
     display: flex;
