--- a/src/component/PaginationTable/index.less
+++ b/src/component/PaginationTable/index.less
@@ -1,4 +1,7 @@
 .pagination-table {
+  display: flex;
+  flex-direction: column;
+
   > .ant-pagination {
     margin-top: 20px;
     display: flex;
