--- a/src/layout/layout.less
+++ b/src/layout/layout.less
@@ -33,7 +33,7 @@
 
   > .main {
     min-width: 1200px;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     > .layout-bar {
